recursion.cons.lessons.recursion.cons.Remove.scala.error
remove:4: error: value head_= is not a member of List[Int]
	if(l.head = v)
             ^remove:4: error: type mismatch;
 found   : Unit
 required: List[Int]
	if(l.head = v)
        ^