recursion.cons.lessons.recursion.cons.Remove.scala.code
def remove(l:List[Int], v:Int): List[Int] = {


	if(l.head = v)
		remove(l.tail, v);

		
	
}